--- a/screencast/columns.html
+++ b/screencast/columns.html
@@ -160,17 +160,17 @@
                   <p>Grid with vertical alignment on .row using flex utilities</p>
                 </div>
                 <div class="container" data-example="row-height">
-                  <div class="row">
+                  <div class="row align-items-start">
                     <div class="col">.col</div>
                     <div class="col">.col</div>
                     <div class="col">.col</div>
                   </div>
-                  <div class="row">
+                  <div class="row align-items-center">
                     <div class="col">.col</div>
                     <div class="col">.col</div>
                     <div class="col">.col</div>
                   </div>
-                  <div class="row">
+                  <div class="row align-items-end">
                     <div class="col">.col</div>
                     <div class="col">.col</div>
                     <div class="col">.col</div>
@@ -182,9 +182,9 @@
                 </div>
                 <div class="container" data-example="row-height">
                   <div class="row">
-                    <div class="col">.col .align-self-start</div>
-                    <div class="col">.col .align-self-center</div>
-                    <div class="col">.col .align-self-end</div>
+                    <div class="col align-self-start">.col .align-self-start</div>
+                    <div class="col align-self-center">.col .align-self-center</div>
+                    <div class="col align-self-end">.col .align-self-end</div>
                   </div>
                 </div>
               </div>
@@ -197,32 +197,32 @@
               </div>
               <div class="code-live">
                 <div class="container">
-                  <div class="row">
+                  <div class="row justify-content-start">
                     <div class="col-3">.col-3</div>
                     <div class="col-3">.col-3</div>
                     <div class="col-3">.col-3</div>
                   </div>
-                  <div class="row">
+                  <div class="row justify-content-center">
                     <div class="col-3">.col-3</div>
                     <div class="col-3">.col-3</div>
                     <div class="col-3">.col-3</div>
                   </div>
-                  <div class="row">
+                  <div class="row justify-content-end">
                     <div class="col-3">.col-3</div>
                     <div class="col-3">.col-3</div>
                     <div class="col-3">.col-3</div>
                   </div>
-                  <div class="row">
+                  <div class="row justify-content-around">
                     <div class="col-3">.col-3</div>
                     <div class="col-3">.col-3</div>
                     <div class="col-3">.col-3</div>
                   </div>
-                  <div class="row">
+                  <div class="row justify-content-between">
                     <div class="col-3">.col-3</div>
                     <div class="col-3">.col-3</div>
                     <div class="col-3">.col-3</div>
                   </div>
-                  <div class="row">
+                  <div class="row justify-content-evenly">
                     <div class="col-3">.col-3</div>
                     <div class="col-3">.col-3</div>
                     <div class="col-3">.col-3</div>
@@ -254,7 +254,7 @@
                     <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
                     <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
                     <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
-                    <div></div>
+                    <div class="w-100"></div>
                     <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
                     <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
                     <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
@@ -267,7 +267,7 @@
                     <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
                     <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
                     <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
-                    <div></div>
+                    <div class="w-100 d-none d-lg-block"></div>
                     <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
                     <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
                     <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
@@ -284,11 +284,11 @@
               <div class="code-live">
                 <div class="container">
                   <div class="row">
-                    <div class="col">First, but last</div>
-                    <div class="col">Second, but number 5</div>
-                    <div class="col">Third, but number 4</div>
-                    <div class="col">Fourth, but number 3</div>
-                    <div class="col">Fifth, but first</div>
+                    <div class="col order-last">First, but last</div>
+                    <div class="col order-3">Second, but number 5</div>
+                    <div class="col order-2">Third, but number 4</div>
+                    <div class="col order-1">Fourth, but number 3</div>
+                    <div class="col order-first">Fifth, but first</div>
                     <div class="col">Last, but unordered, so number 2</div>
                   </div>
                 </div>
@@ -302,29 +302,29 @@
                 <div class="container">
                   <div class="row">
                     <div class="col-md-5">.col-md-5</div>
-                    <div class="col-md-5">.col-md-5 .offset-md-2</div>
+                    <div class="col-md-5 offest-md-2">.col-md-5 .offset-md-2</div>
                   </div>
                   <div class="row">
-                    <div class="col-lg-4">.col-lg-4 .offset-lg-3</div>
-                    <div class="col-lg-2">.col-lg-2 .offset-lg-3</div>
+                    <div class="col-lg-4 offset-lg-3">.col-lg-4 .offset-lg-3</div>
+                    <div class="col-lg-2 offset-lg-3">.col-lg-2 .offset-lg-3</div>
                   </div>
                   <div class="row">
                     <div class="col-sm-6 col-md-5 col-lg-6">.col-sm-6 .col-md-5 .col-lg-6</div>
-                    <div class="col-sm-6 col-md-5 col-lg-6">.col-sm-6 .col-md-5 .offset-md-2 .col-lg-6 .offset-lg-0</div>
+                    <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">.col-sm-6 .col-md-5 .offset-md-2 .col-lg-6 .offset-lg-0</div>
                   </div>
                 </div>
                 <h4 class="h5 text-muted mt-3 container">Spacing utilities</h4>
                 <div class="container">
                   <div class="row">
                     <div class="col-md-5">.col-md-5</div>
-                    <div class="col-md-5">.col-md-5 .ms-auto</div>
+                    <div class="col-md-5 ms-auto">.col-md-5 .ms-auto</div>
                   </div>
                   <div class="row">
-                    <div class="col-lg-4">.col-lg-4 .ms-lg-auto</div>
-                    <div class="col-lg-2">.col-lg-2 .ms-lg-auto</div>
+                    <div class="col-lg-4 ms-lg-auto">.col-lg-4 .ms-lg-auto</div>
+                    <div class="col-lg-2 ms-lg-auto">.col-lg-2 .ms-lg-auto</div>
                   </div>
                   <div class="row">
-                    <div class="col-sm-6">.col-sm-6 .me-lg-auto</div>
+                    <div class="col-sm-6 me-lg-auto">.col-sm-6 .me-lg-auto</div>
                     <div class="col-sm-3">.col-sm-3</div>
                   </div>
                 </div>
@@ -334,18 +334,18 @@
             <div class="code-example mb-5">
               <h3 class="component-variation text-muted container">Standalone column classes</h3>
               <div class="code-live">
-                <div>8.333333%</div>
-                <div>16.666667%</div>
-                <div>25%</div>
-                <div>33.333333%</div>
-                <div>41.666667%</div>
-                <div>50%</div>
-                <div>58.333333%</div>
-                <div>66.666667%</div>
-                <div>75%</div>
-                <div>83.333333%</div>
-                <div>91.666667%</div>
-                <div>100%</div>
+                <div class="col-1">8.333333%</div>
+                <div class="col-2">16.666667%</div>
+                <div class="col-3">25%</div>
+                <div class="col-4">33.333333%</div>
+                <div class="col-5">41.666667%</div>
+                <div class="col-6">50%</div>
+                <div class="col-7">58.333333%</div>
+                <div class="col-8">66.666667%</div>
+                <div class="col-9">75%</div>
+                <div class="col-10">83.333333%</div>
+                <div class="col-11">91.666667%</div>
+                <div class="col-12">100%</div>
               </div>
             </div>
 
